tests/baselines/reference/declarationWithNoInitializer(strict=true).errors.txt
declarationWithNoInitializer.ts(1,5): error TS1182: A destructuring declaration must have an initializer.
declarationWithNoInitializer.ts(1,6): error TS7031: Binding element 'a' implicitly has an 'any' type.
declarationWithNoInitializer.ts(1,9): error TS7031: Binding element 'b' implicitly has an 'any' type.
declarationWithNoInitializer.ts(2,5): error TS1182: A destructuring declaration must have an initializer.
declarationWithNoInitializer.ts(2,6): error TS7031: Binding element 'c' implicitly has an 'any' type.
declarationWithNoInitializer.ts(2,9): error TS7031: Binding element 'd' implicitly has an 'any' type.


==== declarationWithNoInitializer.ts (6 errors) ====
    var [a, b];          // Error, no initializer
        ~~~~~~
!!! error TS1182: A destructuring declaration must have an initializer.
         ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
            ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    var {c, d};          // Error, no initializer
        ~~~~~~
!!! error TS1182: A destructuring declaration must have an initializer.
         ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
            ~
!!! error TS7031: Binding element 'd' implicitly has an 'any' type.
    